[tool.poetry]
name = "cstats"
version = "0.1.0"
description = ""
authors = ["Evgeny <eug.save@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
plotly = "^6.5.2"
pandas = "^3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
